--- a/src/components/pageAbout/sectionPurpose/style.module.scss
+++ b/src/components/pageAbout/sectionPurpose/style.module.scss
@@ -5,6 +5,8 @@
     justify-content: center;
     font-family: Montserrat Alternates;
 
+    padding-bottom: 32px;
+
     & .title {
         margin-top: 26px;
         color: #FFF;
