--- a/src/components/pageAbout/sectionWhat/style.module.scss
+++ b/src/components/pageAbout/sectionWhat/style.module.scss
@@ -54,3 +54,21 @@
         }
     }
 }
+
+@media (min-width: 767px) {
+    .whatP p {
+        font-size: 24px;
+    }
+
+    .card {
+        gap: 16px !important;
+
+        & p {
+            font-size: 20px !important;
+        }
+    }
+
+    .whatTwo {
+        font-size: 20px !important;
+    }
+}
