--- a/src/components/pageAbout/card/style.module.scss
+++ b/src/components/pageAbout/card/style.module.scss
@@ -7,3 +7,10 @@
     border-radius: 30px;
     box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.28);
 }
+
+@media (min-width: 767px) {
+    .card {
+        width: 200px;
+        height: 200px;
+    }
+}
