--- a/src/components/pageAbout/sectionWhat/style.module.scss
+++ b/src/components/pageAbout/sectionWhat/style.module.scss
@@ -1,5 +1,10 @@
-.whatP {
-    margin-top: 20px;
+.sectionWhat {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0px;
 }
 
 .whatP p {
@@ -13,8 +18,6 @@
 }
 
 .whatTwo {
-    margin-top: 24px;
-    margin-bottom: 24px;
     color: #FFF;
     text-align: center;
     font-family: Montserrat Alternates;
@@ -25,7 +28,6 @@
 }
 
 .cards {
-    margin-top: 24px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -70,5 +72,18 @@
 
     .whatTwo {
         font-size: 20px !important;
+    }
+}
+
+@media (min-width: 1024px) {
+    .sectionWhat {
+        padding: 48px 0px;
+        gap: 32px;
+    }
+    .cards { 
+        gap: 40px;
+    }
+    .whatTwo {
+        max-width: 910px;
     }
 }
