--- a/src/components/pageAbout/sectionWork/style.module.scss
+++ b/src/components/pageAbout/sectionWork/style.module.scss
@@ -1,13 +1,13 @@
-.work {
+.sectionWork {
     background-color: #5D6887;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 24px;
+    padding: 32px 0px;
 
     & .title p {
-        margin-top: 16px;
         color: #FFF;
         text-align: center;
         font-family: Montserrat Alternates;
@@ -29,11 +29,20 @@
         }
     }
 
+    .batyaListCard {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 28px;
+    }
+
     .listMy {
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
 
         & li {
-            margin-top: 10px;
             color: #FFF;
             font-family: Montserrat Alternates;
             font-size: 16px;
@@ -49,7 +58,7 @@
         align-items: center;
         justify-content: center;
         gap: 20px;
-        margin-bottom: 32px;
+        margin-top: 24px;
 
         & .card {
             display: flex;
@@ -81,20 +90,52 @@
 }
 
 @media only screen and (min-width: 767px) {
-    .work .title p {
+    .sectionWork .title p {
         font-size: 24px;
     }
 
-    .work .mediaTI {
+    .sectionWork .mediaTI {
         & img {
             width: 483px;
             height: auto;
         }
     }
 
-    .work .listMy {
+    .sectionWork .listMy {
         & li {
             font-size: 20px;
         }
     }
+}
+
+@media only screen and (min-width: 1024px) {
+    .sectionWork {
+        & .mediaTI {
+            & img {
+                width: 426px;
+                height: 410px;
+            }
+        }
+
+        & .batyaListCard {
+            display: flex;
+            flex-direction: row-reverse;
+            padding: 0px 20px;
+        }
+
+        & .listMy {
+            max-width: 530px;
+            text-align: right;
+            display: flex;
+            flex-direction: column;
+            gap: 32px;
+        }
+
+        & .list {
+            margin-top: 32px;
+            justify-content: right;
+            gap: 32px;
+        }
+    }
+
 }
