--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -2,9 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 16px;
+    padding: 16px 20px;
+    border-radius: 0px 0px 15px 15px;
 
     & .title {
         color: #fff;
