--- a/src/components/pageAbout/sectionPurpose/style.module.scss
+++ b/src/components/pageAbout/sectionPurpose/style.module.scss
@@ -66,7 +66,14 @@
         line-height: 24px;
         padding: 6px 12px;
     }
-    .custom { 
+
+    & .miniCont {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .custom {
         margin: 0 auto;
     }
 }
@@ -93,6 +100,7 @@
     .custom {
         margin: 0px;
     }
+
     .sectionPurpose {
         padding: 48px 0px;
 
@@ -125,6 +133,10 @@
             margin-top: 32px;
             align-items: center;
             justify-content: center;
+
+            & .miniCont {
+                align-items: start;
+            }
 
             & .answerMob {
                 display: none;
