--- a/src/components/pageHome/dropDownButton/style.module.scss
+++ b/src/components/pageHome/dropDownButton/style.module.scss
@@ -14,6 +14,7 @@
         justify-content: center;
         align-items: center;
         border-radius: 15px;
+        user-select: none;
 
         &:hover {
             background-color: #27273A;
