--- a/src/components/pageHome/seacrhInput/style.module.scss
+++ b/src/components/pageHome/seacrhInput/style.module.scss
@@ -1,8 +1,8 @@
 .seacrh {
     display: flex;
     justify-content: space-around;
-    width: 232px;
-    height: 38px;
+    width: 100%;
+    height: 40px;
 
     & input {
         border-radius: 15px 0px 0px 15px;
