--- a/src/components/pageHome/dropDownButton/style.module.scss
+++ b/src/components/pageHome/dropDownButton/style.module.scss
@@ -8,7 +8,7 @@
         cursor: pointer;
         background-color: #383752;
         filter: drop-shadow(2px 4px 4px rgba(0, 0, 0, 0.25));
-        height: 50px;
+        height: 40px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -22,7 +22,7 @@
         & p {
             color: #FFF;
             font-family: Montserrat Alternates;
-            font-size: 17px;
+            font-size: 14px;
             font-style: normal;
             font-weight: 700;
             line-height: normal;
@@ -33,5 +33,16 @@
     & .dataDrop {
         display: none;
         transition: margin-top 1s;
+    }
+}
+
+@media (min-width: 767px) {
+    .mainDrop {
+        & .button {
+            height: 48px;
+            & p {
+                font-size: 17px;
+            }
+        }
     }
 }
