--- a/src/components/pageHome/seacrhInput/style.module.scss
+++ b/src/components/pageHome/seacrhInput/style.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    height: 40px;
+    // height: 40px;
 
     & input {
         border-radius: 15px 0px 0px 15px;
@@ -39,4 +39,19 @@
         height: auto;
         border-radius: 0px 15px 15px 0px;
     }
+}
+
+@media (min-width: 767px) {
+
+    .seacrh {
+        & input {
+            font-size: 17px;
+            padding-left: 16px;
+
+            &::placeholder {
+                font-size: 16px;
+            }
+        }
+    }
+
 }
