--- a/src/components/mopik/style.module.scss
+++ b/src/components/mopik/style.module.scss
@@ -30,7 +30,15 @@
                 font-style: normal;
                 font-weight: 400;
                 line-height: 24px;
-                /* 171.429% */
+            }
+
+            & .next {
+                color: #75BD4E;
+                font-family: Verdana;
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 24px;
             }
 
         }
