--- a/src/components/mopik/style.module.scss
+++ b/src/components/mopik/style.module.scss
@@ -2,9 +2,10 @@
     display: flex;
     min-height: 70px;
     justify-content: space-between;
-    cursor: pointer;
     user-select: none;
-
+    cursor: pointer;
+    caret-color: transparent;
+    -webkit-tap-highlight-color: transparent;
     & .data {
         width: fit-content;
         // border-radius: 15px 0px 0px 15px;
@@ -16,6 +17,7 @@
             flex-direction: column;
             gap: 8px;
             padding: 10px;
+            
 
             & .title {
                 color: #FFF;
@@ -48,7 +50,7 @@
     & .meta {
         width: 37px;
         height: auto;
-        border-radius: 0px 15px 15px 0px;
+        border-radius: 0px 10px 10px 0px;
         background: #27273A;
         display: flex;
         flex-direction: column;
