--- a/src/components/pageHome/dropDownButton/rules/style.module.scss
+++ b/src/components/pageHome/dropDownButton/rules/style.module.scss
@@ -26,6 +26,8 @@
     filter: drop-shadow(2px 4px 4px rgba(0, 0, 0, 0.25));
     padding-top: 8px;
     padding-bottom: 8px;
+    caret-color: transparent;
+    -webkit-tap-highlight-color: transparent;
 
     & .ruleElements {
         width: 100%;
