--- a/src/components/pageHome/dropDownButton/style.module.scss
+++ b/src/components/pageHome/dropDownButton/style.module.scss
@@ -2,8 +2,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    // margin: auto;
-    // max-width: 295px;
+    caret-color: transparent;
+    -webkit-tap-highlight-color: transparent;
 
     & .button {
         cursor: pointer;
@@ -25,7 +25,7 @@
             font-family: Montserrat Alternates;
             font-size: 14px;
             font-style: normal;
-            font-weight: 700;
+            font-weight: 500;
             line-height: normal;
         }
 
