--- a/src/components/pageHome/writeButton/style.module.scss
+++ b/src/components/pageHome/writeButton/style.module.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    user-select: none;
     caret-color: transparent;
     -webkit-tap-highlight-color: transparent;
 
