--- a/src/components/mopik/style.module.scss
+++ b/src/components/mopik/style.module.scss
@@ -19,6 +19,7 @@
             display: flex;
             flex-direction: column;
             gap: 8px;
+            margin-bottom: 10px;
             // padding: 10px;
 
 
@@ -45,7 +46,7 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
-            margin-top: 8px;
+            margin-top: 12px;
         }
 
         & .next {
