--- a/src/components/pageHome/dropDownButton/rules/style.module.scss
+++ b/src/components/pageHome/dropDownButton/rules/style.module.scss
@@ -10,7 +10,7 @@
 
     & img {
         width: 190px;
-        height: fit-content;
+        height: auto;
     }
 }
 
@@ -47,7 +47,7 @@
 
             & img {
                 width: 32px;
-                height: fit-content;
+                height: 100%;
             }
 
             & p {
