--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -17,10 +17,14 @@
         justify-content: center;
 
         & .otboynik {
-            
+
             max-width: 620px;
+
             & .list {
                 margin-top: 24px;
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
             }
         }
 
