--- a/src/components/mopik/style.module.scss
+++ b/src/components/mopik/style.module.scss
@@ -95,6 +95,7 @@
 @media (min-width: 767px) {
     .mopik {
         & .data{
+            padding: 13px;
             & .social {
                 // margin-left: 30px;
                 // margin-right: 30px;
