--- a/src/components/pageHome/dropDownButton/rules/style.module.scss
+++ b/src/components/pageHome/dropDownButton/rules/style.module.scss
@@ -5,7 +5,7 @@
     background: #383752;
     filter: drop-shadow(2px 4px 4px rgba(0, 0, 0, 0.25));
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
 
     & img {
