--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -4,6 +4,8 @@
     justify-content: space-between;
     padding: 16px 20px;
     border-radius: 0px 0px 15px 15px;
+    max-width: 1440px;
+    margin: 0 auto;
 
     & .title {
         color: #fff;
