--- a/src/components/Auth/style.module.scss
+++ b/src/components/Auth/style.module.scss
@@ -18,7 +18,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #383752;
-    min-width: 345px;
+    min-width: 320px;
     // height: 520px;
     border-radius: 15px;
 
@@ -95,7 +95,27 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 8px;
+    margin-top: 8px;
+
+    & .button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 10px;
+        border: 2px solid #626262;
+        background: #F1F1F1;
+        padding: 10px 50px;
+        margin: auto;
+
+        & p {
+            color: #626262;
+            font-family: Montserrat Alternates;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+        }
+    }
 
     & .lvl {
         display: flex;
@@ -126,4 +146,21 @@
             line-height: normal;
         }
     }
+
+    & .lvl2 {
+        display: flex;
+        gap: 8px;
+        cursor: pointer;
+
+        & label {
+            color: #B7B7BD;
+            font-family: Montserrat Alternates;
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+        }
+    }
+
+
 }
