--- a/src/components/Auth/style.module.scss
+++ b/src/components/Auth/style.module.scss
@@ -133,6 +133,7 @@
         background: #F1F1F1;
         padding: 10px 50px;
         margin: auto;
+        margin-top: -8px;
 
         & p {
             color: #626262;
@@ -152,7 +153,7 @@
         & label {
             color: #B7B7BD;
             font-family: Montserrat Alternates;
-            font-size: 14px;
+            font-size: 13px;
             font-style: normal;
             font-weight: 600;
             line-height: normal;
@@ -163,7 +164,7 @@
             border-radius: 10px;
             border: 2px solid #626262;
             background: #F1F1F1;
-            height: 38px;
+            height: 36px;
 
             color: #363638;
             font-family: Montserrat Alternates;
@@ -209,7 +210,18 @@
     .form {
         gap: 22px;
         padding: 16px;
-        // padding-left: 0px;
+
+        & .lvl {
+            & label {
+                font-size: 14px;
+            }   
+            & input {
+                height: 38px;
+            }
+        }
+        & .button {
+            margin-top: 0px;
+        }
     }
 
 }
