--- a/src/components/header/burgerMenu/style.module.scss
+++ b/src/components/header/burgerMenu/style.module.scss
@@ -51,9 +51,9 @@
     }
 
     &.open {
-        .burger__icon .line {
-            // background-color: transparent;
-        }
+        // .burger__icon .line {
+        //     // background-color: transparent;
+        // }
 
         .menu__items {
             display: block;
