--- a/src/pages/Profile/style.module.scss
+++ b/src/pages/Profile/style.module.scss
@@ -6,5 +6,43 @@
     padding-left: 20px;
     padding-right: 20px;
     align-items: center;
+    & .block {
+        width: 100%;
+        max-width: 320px;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    & .lenta {
+        max-width: 620px;
+    }
 }
 
+@media (min-width: 670px) and (max-width: 1024px) {
+    .razm {
+        // flex-direction: row-reverse;
+        // align-items: flex-start;
+        // justify-content: center;
+
+        & .block {
+            max-width: 620px;
+            flex-direction: row;
+            gap: 24px;
+        }
+    }
+
+}
+
+@media (min-width: 1024px) {
+    .razm {
+        flex-direction: row-reverse;
+        align-items: flex-start;
+        justify-content: center;
+
+        & .block {
+            min-width: 300px;
+            width: auto;
+        }
+    }
+}
