style header padd

--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -50,3 +50,11 @@
         }
     }
 }
+
+
+@media (min-width: 1440px) {
+    .header {
+        padding-left: 88px;
+        padding-right: 88px;
+    }
+}
