--- a/src/components/pageNotes/notes/style.module.scss
+++ b/src/components/pageNotes/notes/style.module.scss
@@ -55,7 +55,7 @@
         & img {
             cursor: pointer;
             width: 28px;
-            height: fit-content;
+            height: 28px;
         }
     }
 
