--- a/src/components/Auth/style.module.scss
+++ b/src/components/Auth/style.module.scss
@@ -114,7 +114,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    margin-top: 8px;
+    // margin-top: 8px;
 
     .modeP {
         color: #FFF;
