--- a/src/components/header/burgerMenu/style.module.scss
+++ b/src/components/header/burgerMenu/style.module.scss
@@ -28,8 +28,8 @@
         position: absolute;
         top: calc(100% + 10px);
         right: 0;
-        background-color: #fff;
-        padding: 10px;
+        background-color: #404040;
+        padding: 16px;
         width: 200px;
         border-radius: 4px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -40,11 +40,21 @@
             margin: 0;
 
             li {
-                margin-bottom: 10px;
+                margin-bottom: 14px;
                 cursor: pointer;
 
                 &:hover {
                     text-decoration: underline;
+                }
+
+                & a {
+                    color: #fff;
+                    text-align: center;
+                    font-family: Montserrat Alternates;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: normal;
                 }
             }
         }
