--- a/src/components/pageNotes/notes/style.module.scss
+++ b/src/components/pageNotes/notes/style.module.scss
@@ -40,6 +40,39 @@
             flex-direction: column;
             gap: 10px;
             overflow: auto;
+
+            &::-webkit-scrollbar {
+                width: 0px;
+                // background-color: rgb(56, 55, 82);
+            }
+
+            /* Задаем цвет скролла */
+            &::-webkit-scrollbar-thumb {
+                background-color: #888;
+            }
+
+            /* Указываем цвет при наведении на скролл */
+            &::-webkit-scrollbar-thumb:hover {
+                background-color: #555;
+            }
+
+            /* Задаем цвет фона скролла */
+            &::-webkit-scrollbar-track {
+                background-color: #f1f1f1;
+            }
+
+            /* Указываем цвет при наведении на фон скролла */
+            &::-webkit-scrollbar-track:hover {
+                background-color: #ddd;
+            }
+
+            /* Указываем цвет крайних частей скролла */
+            &::-webkit-scrollbar-corner {
+                background-color: #f1f1f1;
+            }
+
+            scrollbar-width: none;
+            -webkit-scrollbar-width: none;
         }
     }
 
