--- a/src/components/pageNotes/notes/style.module.scss
+++ b/src/components/pageNotes/notes/style.module.scss
@@ -1,8 +1,58 @@
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.loader {
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #3498db;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    animation: spin 2s linear infinite;
+    margin: 0 auto;
+}
+
 .notes {
     width: 100%;
     height: 640px;
     background-color: #383752;
     display: flex;
+    position: relative;
+    overflow: hidden;
+
+    .element {
+        position: relative;
+        animation: slideIn 1s forwards;
+      }
+      
+      @keyframes slideIn {
+        0% {
+          left: -100%;
+          transform: scale(1);
+        }
+      
+        50% {
+          left: calc(100% - 99.5%);
+          transform: scale(0.99);
+        }
+      
+        // 60% {
+        //   left: calc(100% - 40px);
+        //   transform: scale(0.95);
+        // }
+      
+        100% {
+          left: 0;
+          transform: scale(1);
+        }
+      }
+      
 
     & .see {
         width: 90%;
@@ -78,12 +128,14 @@
 
     & .notSee {
         display: flex;
-        justify-content: center;
         width: 10%;
         background-color: #27273A;
         height: 100%;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
         padding-top: 16px;
-
+        padding-bottom: 24px;
 
         & .back {
             cursor: pointer;
@@ -114,7 +166,7 @@
 }
 
 .cardNotes {
-    padding: 8px;
+    padding: 10px;
     border-radius: 15px;
     background: #383752;
     width: 100%;
