--- a/src/components/pageNotes/notes/style.module.scss
+++ b/src/components/pageNotes/notes/style.module.scss
@@ -1,3 +1,13 @@
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 .notes {
     width: 100%;
     height: 640px;
@@ -132,6 +142,7 @@
         padding: 16px;
 
         & .textareaElement {
+            animation: fadeIn 0.7s ease-in;
             width: 100%;
             height: 100%;
             overflow: auto;
@@ -171,7 +182,6 @@
         margin: auto;
         width: 100%;
         height: 640px;
-        border-radius: 10px;
 
         & .see {
             width: 50%;
