dev scroll down list mopiks

--- a/src/components/mopik/style.module.scss
+++ b/src/components/mopik/style.module.scss
@@ -33,6 +33,7 @@
             }
 
             & .text {
+                white-space: pre-line;
                 color: #B7B7BD;
                 font-family: Verdana;
                 font-size: 14px;
