--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -20,12 +20,12 @@
 
             max-width: 620px;
 
-            & .list {
-                margin-top: 24px;
-                display: flex;
-                flex-direction: column;
-                gap: 16px;
-            }
+            // & .list {
+            //     margin-top: 24px;
+            //     display: flex;
+            //     flex-direction: column;
+            //     gap: 16px;
+            // }
         }
 
 
