--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -19,6 +19,7 @@
         & .otboynik {
 
             max-width: 620px;
+            width: 100%;
 
             // & .list {
             //     margin-top: 24px;
