dev add likes and write comments

--- a/src/components/areaComment/style.module.scss
+++ b/src/components/areaComment/style.module.scss
@@ -4,6 +4,7 @@
     width: 100%;
     
     & .textareaElement {
+        cursor: text;
         border-radius: 15px 0px 0px 15px;
         background: #383752;
 
