--- a/src/components/mopik/style.module.scss
+++ b/src/components/mopik/style.module.scss
@@ -1,3 +1,19 @@
+.textLoading {
+    -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, .6) 30%, #000 50%, rgba(0, 0, 0, .6) 70%);
+    -webkit-mask-size: 200%;
+    animation: loadingAnimation 1.5s infinite;
+}
+
+@keyframes loadingAnimation {
+    from {
+        -webkit-mask-position: 150%;
+    }
+
+    to {
+        -webkit-mask-position: -50%;
+    }
+}
+
 .mopik {
     display: flex;
     min-height: 70px;
@@ -75,6 +91,7 @@
         & .like img {
             width: 25px;
             height: auto;
+            cursor: pointer;
         }
 
         & .comment img {
@@ -95,8 +112,9 @@
 
 @media (min-width: 767px) {
     .mopik {
-        & .data{
+        & .data {
             padding: 13px;
+
             & .social {
                 // margin-left: 30px;
                 // margin-right: 30px;
