--- a/src/components/mopik/style.module.scss
+++ b/src/components/mopik/style.module.scss
@@ -14,6 +14,23 @@
     }
 }
 
+@keyframes slideIn {
+    0% {
+        left: -100%;
+        transform: scale(1);
+    }
+
+    50% {
+        left: calc(100% - 99.5%);
+        transform: scale(0.99);
+    }
+
+    100% {
+        left: 0;
+        transform: scale(1);
+    }
+}
+
 .mopik {
     display: flex;
     min-height: 70px;
@@ -60,6 +77,7 @@
         }
 
         & .social {
+            animation: slideIn 1s forwards;
             display: flex;
             flex-direction: column;
             gap: 12px;
@@ -67,6 +85,7 @@
         }
 
         & .next {
+            animation: slideIn 1s forwards;
             color: #75BD4E;
             font-family: Verdana;
             font-size: 14px;
