--- a/src/components/pageProfile/cardMain/style.module.scss
+++ b/src/components/pageProfile/cardMain/style.module.scss
@@ -9,6 +9,7 @@
     padding: 16px;
     justify-content: center;
     margin: auto;
+    position: relative;
 
     & .avatar {
         & img {
@@ -28,6 +29,18 @@
             font-style: normal;
             font-weight: 900;
             line-height: normal;
+        }
+    }
+
+    & .red {
+        cursor: pointer;
+        position: absolute;
+        top: 16px;
+        right: 16px;
+        & img {
+            display: block;
+            width: 32px;
+            height: auto;
         }
     }
 
