--- a/src/components/blockAvatar/style.module.scss
+++ b/src/components/blockAvatar/style.module.scss
@@ -1,14 +1,23 @@
-.avatar {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    width: fit-content;
-    & p {
-        color: #B7B7BD;
-        font-family: Verdana;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
+.main {
+    transition: transform 0.3s; 
+    &:hover {
+        // background-color: black;
+        transform: scale(1.1);
+    }
+
+    & .avatar {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        width: fit-content;
+
+        & p {
+            color: #B7B7BD;
+            font-family: Verdana;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+        }
     }
 }
