--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -20,7 +20,18 @@
 
     & .links {
         display: none;
+
+        & li a {
+            &:hover {
+                color: #B7B7BD;
+            }
+        }
+
     }
+}
+
+.active {
+    color: #75BD4E;
 }
 
 
