--- a/src/components/mopik/social/style.module.scss
+++ b/src/components/mopik/social/style.module.scss
@@ -19,6 +19,8 @@
         font-style: normal;
         font-weight: 400;
         line-height: 24px;
-        /* 150% */
+        &:hover {
+            color: #5c9c39; 
+        }
     }
 }
