--- a/src/components/mopik/style.module.scss
+++ b/src/components/mopik/style.module.scss
@@ -41,19 +41,22 @@
     -webkit-tap-highlight-color: transparent;
 
     & .data {
-        cursor: pointer;
+        animation: slideIn 1s forwards;
         width: fit-content;
-        // border-radius: 15px 0px 0px 15px;
         border-radius: 10px;
         background: #383752;
         padding: 10px;
+
+        gap: 12px;
+        display: flex;
+        flex-direction: column;
 
         & .written {
             display: flex;
             flex-direction: column;
             gap: 8px;
-            margin-bottom: 10px;
             // padding: 10px;
+            // cursor: pointer;
 
 
             & .title {
@@ -66,6 +69,7 @@
             }
 
             & .text {
+                cursor: pointer;
                 white-space: pre-line;
                 color: #B7B7BD;
                 font-family: Verdana;
@@ -81,7 +85,7 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
-            margin-top: 12px;
+            // margin-top: 12px;
         }
 
         & .next {
@@ -111,6 +115,32 @@
             width: 25px;
             height: auto;
             cursor: pointer;
+            transition: transform 0.3s;
+
+            &:hover {
+                transform: scale(1.15);
+            }
+
+            &:active {
+                animation: slideIn 2s forwards;
+
+                @keyframes slideIn {
+                    0% {
+                        left: -100%;
+                        transform: scale(1);
+                    }
+
+                    50% {
+                        left: calc(100% - 99.5%);
+                        transform: scale(0.99);
+                    }
+
+                    100% {
+                        left: 0;
+                        transform: scale(1);
+                    }
+                }
+            }
         }
 
         & .comment img {
