--- a/src/components/pageCreateMopik/revealMe/style.module.scss
+++ b/src/components/pageCreateMopik/revealMe/style.module.scss
@@ -6,7 +6,7 @@
     background: #383752;
     margin-top: 8px;
     // max-width: 736px;
-    gap: 16px;
+    gap: 18px;
 
     & img {
         border-radius: 10px;
@@ -17,7 +17,7 @@
     & .list {
         display: flex;
         flex-direction: column;
-        gap: 8px;
+        gap: 16px;
         padding: 16px;
         padding-top: 0px;
 
@@ -32,21 +32,21 @@
     }
 }
 
-@media (min-width: 768px) {
+// @media (min-width: 768px) {
 
-    .reveal {
-        flex-direction: row;
+//     .reveal {
+//         flex-direction: row;
 
-        & img {
-            max-width: 300px;
-        }
+//         & img {
+//             max-width: 300px;
+//         }
 
-        & .list {
-            padding: 0px;
-            & p {
-                font-size: 16px;
-            }
-        }
-    }
+//         & .list {
+//             padding: 0px;
+//             & p {
+//                 font-size: 16px;
+//             }
+//         }
+//     }
 
-}
+// }
