--- a/src/components/pageHome/list/style.module.scss
+++ b/src/components/pageHome/list/style.module.scss
@@ -4,3 +4,14 @@
     flex-direction: column;
     gap: 16px;
 }
+
+.noObj {
+    color: #b5b5b5;
+    font-family: Montserrat Alternates;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: center;
+    margin-top: 70px;
+}
