--- a/src/components/pageProfile/selectMopiks/style.module.scss
+++ b/src/components/pageProfile/selectMopiks/style.module.scss
@@ -19,7 +19,7 @@
             line-height: normal;
 
             &:hover {
-                color: #75BD4E;
+                color: #588440;
             }
         }
     }
@@ -28,6 +28,17 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
+
+        & .notObj {
+            color: #b5b5b5;
+            font-family: Montserrat Alternates;
+            font-size: 13px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            text-align: center;
+            margin-top: 70px;
+        }
     }
 }
 
