--- a/src/components/pageNotes/notes/style.module.scss
+++ b/src/components/pageNotes/notes/style.module.scss
@@ -10,7 +10,8 @@
 
 .notes {
     width: 100%;
-    height: 640px;
+    // height: 640px;
+    height: 100vh;
     background-color: #383752;
     display: flex;
     position: relative;
