--- a/src/components/Auth/style.module.scss
+++ b/src/components/Auth/style.module.scss
@@ -1,32 +1,44 @@
-.shadow {
+// .shadow {
 
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    padding: 1rem;
-    left: 0;
-    top: 0;
-    backdrop-filter: blur(4px);
-    background-color: rgba(0, 0, 0, 0.1);
-    opacity: 1;
-    z-index: 2147483636;
-}
+//     width: 100%;
+//     height: 100%;
+//     position: fixed;
+//     padding: 1rem;
+//     left: 0;
+//     top: 0;
+//     backdrop-filter: blur(4px);
+//     background-color: rgba(0, 0, 0, 0.1);
+//     opacity: 1;
+//     z-index: 2147483636;
+// }
+
+// .skeleton {
+// position: fixed;
+// top: 50%;
+// left: 50%;
+// transform: translate(-50%, -50%);
+//     background-color: #383752;
+//     // min-width: 320px;
+//     // height: 520px;
+//     border-radius: 15px;
+
+//     padding: 16px;
 
 .main {
+
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
     background-color: #383752;
-    min-width: 320px;
-    // height: 520px;
+    padding: 16px;
     border-radius: 15px;
+    width: 300px;
 
     display: flex;
     flex-direction: column;
     gap: 8px;
-
-    padding: 16px;
 
     & .close {
         position: absolute;
@@ -67,6 +79,8 @@
     }
 }
 
+// }
+
 .choice {
     display: flex;
     flex-direction: column;
@@ -102,9 +116,9 @@
     & p {
         color: #FFF;
         font-family: Montserrat Alternates;
-        font-size: 16px;
+        font-size: 15px;
         font-style: normal;
-        font-weight: 900;
+        font-weight: 800;
         line-height: normal;
     }
 }
@@ -115,6 +129,24 @@
     flex-direction: column;
     gap: 16px;
     // margin-top: 8px;
+
+    & .error {
+        color: #ff8686;
+        font-family: Montserrat Alternates;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    & .loading {
+        color: #B7B7BD;
+        font-family: Montserrat Alternates;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
 
     .modeP {
         color: #FFF;
@@ -144,6 +176,13 @@
             font-weight: 600;
             line-height: normal;
         }
+
+        &:disabled {
+            background-color: #bfbfbf;
+            cursor: not-allowed;
+            color: #666666;
+        }
+
     }
 
     & .lvl {
@@ -193,9 +232,13 @@
 }
 
 @media (min-width: 767px) {
+
+    // .skeleton {
     .main {
+        width: 654px;
         padding: 0px;
         flex-direction: row;
+
 
         & .mode {
             padding: 16px;
@@ -208,11 +251,14 @@
         }
     }
 
+    // }
+
     .form {
         gap: 22px;
         padding: 16px;
         min-width: 332px;
         min-height: 304px;
+
         & .lvl {
             & label {
                 font-size: 14px;
