--- a/src/components/pageNotes/plugNotes/style.module.scss
+++ b/src/components/pageNotes/plugNotes/style.module.scss
@@ -143,6 +143,12 @@
         padding: 16px;
 
         & .textareaElement {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 16px;
+            word-wrap: break-word;
+            white-space: pre-line;
             animation: fadeIn 0.7s ease-in;
             width: 100%;
             height: 100%;
@@ -154,7 +160,19 @@
             font-style: normal;
             font-weight: 400;
             line-height: 24px;
-            /* 171.429% */
+
+            & img {
+                width: 95%;
+                height: 280px;
+                object-fit: cover;
+                border-radius: 15px;
+
+                @media (min-width: 768px) {
+                    & {
+                        width: 75%;
+                    }
+                }
+            }
         }
     }
 }
